--- a/website/docs/middlewares.mdx
+++ b/website/docs/middlewares.mdx
@@ -351,3 +351,56 @@ export default function createUser(req, res, ctx) {
 
 The `node-file-router` is designed for flexibility in its interface. You can introduce any number of arguments
 at the beginning, and these arguments will remain accessible throughout all stages of the processing chain.
+
+## Returning Result
+
+<img
+  width={500}
+  height={312.5}
+  alt="Returning Result Diagram"
+  src={useBaseUrl('/img/diagrams/middleware-return-result-diagram.svg')}
+/>
+
+In some situations, you may need to use an object as the final outcome of middleware, or modify one within a request
+handler. A good example is altering a Response object in Bun.js. To do this, just return a value from the middleware.
+This value will then be the result of the `await next()` call.
+
+<Tabs>
+<TabItem value="js" label="JavaScript" default>
+
+```js
+export async function useCors(req, next) {
+  const res = await next();
+  if (!res) return;
+
+  res.headers.set('Access-Control-Allow-Methods', 'PUT');
+
+  return res;
+}
+```
+
+</TabItem>
+<TabItem value="ts" label="TypeScript">
+
+```ts
+import type { NextFunction } from 'node-file-router';
+
+export async function useCors(req: Request, next: NextFunction<Response>) {
+  const res = await next();
+  if (!res) return;
+
+  res.headers.set('Access-Control-Allow-Methods', 'PUT');
+
+  return res;
+}
+```
+
+</TabItem>
+</Tabs>
+
+:::warning Note
+
+Remember to return the result of await next() in the subsequent middlewares if you wish to utilize the outcome from
+later stages. In other scenarios, returning a result from `next` is not mandatory.
+
+:::
