docs: add custom edit urls

--- a/website/docs/getting-started.mdx
+++ b/website/docs/getting-started.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 0
+custom_edit_url: https://github.com/Danilqa/node-file-router/blob/main/website/docs/getting-started.mdx
 ---
 
 import Tabs from '@theme/Tabs';
