--- a/website/docs/use-with-bun.mdx
+++ b/website/docs/use-with-bun.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+custom_edit_url: https://github.com/Danilqa/node-file-router/blob/main/website/docs/use-with-bun.mdx
 ---
 
 import Tabs from '@theme/Tabs';
@@ -8,9 +9,9 @@ import TabItem from '@theme/TabItem';
 # Usage with Bun
 
 [Bun](https://bun.sh/) is a toolkit for JavaScript and TypeScript development, allowing you to run, build, test,
-and debug a full-stack application. 
+and debug a full-stack application.
 
-For examples of projects, please refer to these resources: 
+For examples of projects, please refer to these resources:
 [Bun](https://github.com/Danilqa/node-file-router/tree/main/examples/bun) or [Bun TypeScript](https://github.com/Danilqa/node-file-router/tree/main/examples/bun-typescript).
 
 ## Initialization
