--- a/website/docs/custom-adapter.mdx
+++ b/website/docs/custom-adapter.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 5
+custom_edit_url: https://github.com/Danilqa/node-file-router/blob/main/website/docs/custom-adapter.mdx
 ---
 
 import Tabs from '@theme/Tabs';
