--- a/website/docs/middlewares.mdx
+++ b/website/docs/middlewares.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 5
+custom_edit_url: https://github.com/Danilqa/node-file-router/blob/main/website/docs/middlewares.mdx
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
