--- a/website/docs/usage-guide.mdx
+++ b/website/docs/usage-guide.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 1
+custom_edit_url: https://github.com/Danilqa/node-file-router/blob/main/website/docs/usage-guide.mdx
 ---
 
 import Tabs from '@theme/Tabs';
