docs(middlewares): improve writing, add information about the final outcome

--- a/website/docs/middlewares.mdx
+++ b/website/docs/middlewares.mdx
@@ -363,7 +363,7 @@ at the beginning, and these arguments will remain accessible throughout all stag
 />
 
 In some situations, you may need to use an object as the final outcome of middleware, or modify one arrived from a request handler.
-A good example is altering a Response object in Bun.js. To do this, just return a value from the middleware. This value will
+A good example is altering a `Response` object in `Bun.js`. To do this, just return a value from the middleware. This value will
 then be the result of the `await next()` call.
 
 <Tabs>
@@ -405,3 +405,11 @@ Remember to return the result of `await next()` in the subsequent middlewares if
 later stages. In other scenarios, returning a result from `next` is not mandatory.
 
 :::
+
+The value from middleware is returned from the `useFileRouter` function, so you can use it in the same way as you would use the
+result from the request handler.
+```js
+const useFileRouter = await initFileRouter();
+// ...
+const response = await useFileRouter(req);
+```
