feat: return result in middlewares (#42)

--- a/website/docs/middlewares.mdx
+++ b/website/docs/middlewares.mdx
@@ -1,5 +1,6 @@
 ---
 sidebar_position: 5
+custom_edit_url: https://github.com/Danilqa/node-file-router/blob/main/website/docs/middlewares.mdx
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -351,3 +352,64 @@ export default function createUser(req, res, ctx) {
 
 The `node-file-router` is designed for flexibility in its interface. You can introduce any number of arguments
 at the beginning, and these arguments will remain accessible throughout all stages of the processing chain.
+
+## Returning Result
+
+<img
+  width={500}
+  height={312.5}
+  alt="Returning Result Diagram"
+  src={useBaseUrl('/img/diagrams/middleware-return-result-diagram.svg')}
+/>
+
+In some situations, you may need to use an object as the final outcome of middleware, or modify one arrived from a request handler.
+A good example is altering a `Response` object in `Bun.js`. To do this, just return a value from the middleware. This value will
+then be the result of the `await next()` call.
+
+<Tabs>
+<TabItem value="js" label="JavaScript" default>
+
+```js
+export async function useCors(req, next) {
+  const res = await next();
+  if (!res) return;
+
+  res.headers.set('Access-Control-Allow-Methods', 'PUT');
+
+  return res;
+}
+```
+
+</TabItem>
+<TabItem value="ts" label="TypeScript">
+
+```ts
+import type { NextFunction } from 'node-file-router';
+
+export async function useCors(req: Request, next: NextFunction<Response>) {
+  const res = await next();
+  if (!res) return;
+
+  res.headers.set('Access-Control-Allow-Methods', 'PUT');
+
+  return res;
+}
+```
+
+</TabItem>
+</Tabs>
+
+:::warning Note
+
+Remember to return the result of `await next()` in the subsequent middlewares if you wish to utilize the outcome from
+later stages. In other scenarios, returning a result from `next` is not mandatory.
+
+:::
+
+The value from middleware is returned from the `useFileRouter` function, so you can use it in the same way as you would use the
+result from the request handler.
+```js
+const useFileRouter = await initFileRouter();
+// ...
+const response = await useFileRouter(req);
+```
