--- a/website/docs/usage-guide.mdx
+++ b/website/docs/usage-guide.mdx
@@ -175,22 +175,29 @@ export default {
 
 Specify functions for each method within the class. The main requirement is that it should be the default export.
 
-```js
-export default class Resource {
+```ts
+export default class SomeResource {
   get(req, res, routeParams) {
     const { documentId, draftId } = routeParams;
     res.end(`Requested document ${documentId} and his draft ${draftId}`);
-  }
-
-  post(req, res, routeParams) {
-    const { documentId, draftId } = routeParams;
-    res.end(`Created draft ${draftId} for document ${documentId}`);
   }
 
   patch(req, res, routeParams) {
     // ...
   }
 }
+```
+
+Alternatively, you can export a class instance:
+
+```ts
+class SomeResource {
+  get(req, res, routeParams) {
+    // ...
+  }
+}
+
+export default new SomeResource();
 ```
 
 ### Methods in Filenames
