feat(lib-api): add parsed routes interface, improve namings

--- a/website/docs/usage-guide.mdx
+++ b/website/docs/usage-guide.mdx
@@ -249,3 +249,15 @@ export default function(req, res, routeParams) {
   // ... your code
 }
 ```
+
+## Showing all registered routes
+
+The initialization function `initFileRouter` receives `onInit` callback which has route
+
+```js
+await initFileRouter({
+  onInit: ({ routes }) => {
+    console.log({ routes })
+  }
+});
+```
